Correccion grafo